# ssh-archive-deploy

./: .gitignore  AGENTS.md  README.md  action.yml  hk.pkl  mise.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: backup-format.md  configuration.md  consumer-workflow.md  security-model.md  usage-integration-plan.md
docs/releases/: v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.3.3.md
examples/: generic-wordpress-catalog.deploy.yml  generic-wordpress-themes.deploy.yml
scripts/: build_pex.py  generate_complete_backup_fixture.py  validate_release_notes.py
src/ssh_archive_deploy/: __init__.py  archive.py  cli.py  complete_backup.py  config.py  deploy.py  doctor.py  errors.py  execution_plan.py  planner.py  report.py  summary.py  transaction.py
tests/: test_archive.py  test_cli.py  test_complete_backup.py  test_config.py  test_deploy_preflight.py  test_doctor.py  test_e2e_harness.py  test_execution_plan.py  test_package_parity_fixture.py  test_release_notes.py  test_report.py  test_rollback_validation.py  test_ssh_policy.py  test_transaction.py
tests/e2e/: compose.yml  conftest.py  harness.py  test_report_ssh.py
tests/e2e/ssh-server/: Dockerfile  entrypoint.sh
tests/fixtures/complete-backup/: backup.json  manifest.json
tests/fixtures/generated-composer/project/theme/: composer.json
tests/fixtures/package-parity/: deploy.yml  expected-manifest.json
tests/fixtures/package-parity/project/: .gitignore
tests/fixtures/scenarios/wordpress-catalog/: deploy.yml
tests/fixtures/scenarios/wordpress-themes/: deploy.yml
(+33 files in other folders)
