[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssh-archive-deploy"
version = "0.2.3"
description = "Generic SSH archive deployment CLI and GitHub Action"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "PyYAML>=6.0.2",
]

[project.scripts]
ssh-archive-deploy = "ssh_archive_deploy.cli:main"

[dependency-groups]
dev = [
  "pyrefly>=1.1.1",
  "pytest>=8.4.1",
  "ruff>=0.12.1",
  "types-PyYAML>=6.0.12.20250516",
]
release = [
  "pex>=2.33.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ssh_archive_deploy"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]
ignore = ["PLR0913"]

[tool.pyrefly]
preset = "strict"
search-path = ["src", "."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "-m", "not e2e"]
markers = [
  "e2e: tests that exercise the CLI against a containerized SSH server",
]
